# internal/odin/server/execution.go
@@ -448,9 +448,15 @@ func (s *OdinServer) GetExecutionConfig(ctx context.Context, params api.GetExecu
 }
 
 func (s *OdinServer) GetAllLanguages(ctx context.Context, params api.GetAllLanguagesParams) (api.GetAllLanguagesRes, error) {
-	var languages []string
-	for lang := range config.Languages {
-		languages = append(languages, lang)
+	var languages []api.Language
+	for lang, details := range config.Languages {
+		languages = append(languages, api.Language{
+			Name:           lang,
+			Extension:      details["extension"],
+			Defaultcode:    details["defaultCode"],
+			Monacolanguage: details["monacoLanguage"],
+			Searchquery:    details["searchquery"],
+		})
 	}
 	return &api.GetAllLanguagesOK{
 		Languages: languages,
